--- a/src/main/resources/views/mybatis/mybatisGeneratePage.html
+++ b/src/main/resources/views/mybatis/mybatisGeneratePage.html
@@ -11,6 +11,7 @@
     <script src="/static/boostrapTable/bootstrap-table-locale-all.min.js " type="text/javascript"></script>
     <script type="text/javascript">
         $(function () {
+            console.log(window.location.host);
             var tableInfoList = [];
             var generateTable = {};
             $.ajax({
